fix(Widget): make Scorecard prefix and suffix whitespaces available

--- a/webapp/app/containers/Widget/components/Chart/Chart.less
+++ b/webapp/app/containers/Widget/components/Chart/Chart.less
@@ -22,6 +22,8 @@
 
       span {
         display: inline-block;
+        line-height: 1;
+        white-space: pre;
       }
     }
   }
